Test: use List.getFirst() instead of get(0) in profile tests
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>