@@ -50,7 +50,7 @@ class GetProfileUseCaseTest {
         ProfileResponse response = getProfileUseCase.execute();
 
         assertThat(response.languages(), hasSize(2));
-        assertThat(response.languages().get(0).name(), is("Catalan"));
+        assertThat(response.languages().getFirst().name(), is("Catalan"));
     }
 
     @Test
@@ -59,8 +59,8 @@ class GetProfileUseCaseTest {
 
         ProfileResponse response = getProfileUseCase.execute();
 
-        assertThat(response.experience().get(0).company(), is("Travel Compositor"));
-        assertThat(response.experience().get(0).end(), is(nullValue()));
+        assertThat(response.experience().getFirst().company(), is("Travel Compositor"));
+        assertThat(response.experience().getFirst().end(), is(nullValue()));
     }
 
     @Test
@@ -70,6 +70,6 @@ class GetProfileUseCaseTest {
         ProfileResponse response = getProfileUseCase.execute();
 
         assertThat(response.education(), hasSize(1));
-        assertThat(response.education().get(0).degree(), containsString("Computer Engineering"));
+        assertThat(response.education().getFirst().degree(), containsString("Computer Engineering"));
     }
 }
